refactor(service): reduce ProductBacklogServiceImpl complexity with helper and validator classes